deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jtq-frontend-deployment
  namespace: jtq
  labels:
    name: jtq-frontend
    app: jtq
spec:
  replicas: 1
  selector:
    matchLabels:
     name: jtq-frontend
  template:
    metadata:
      labels:
        name: jtq-frontend
    spec:
      containers:
      - name: jtq-frontend
        image: nginx
        ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jtq-backend-deployment
  namespace: jtq
  labels:
    name: jtq-backend
    app: jtq
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jtq-backend
  template:
    metadata:
      labels:
        name: jtq-backend
    spec:
      containers:
      - name: jtq-backend
        image: ghcr.io/jaumoso/jump-the-queue/jtq-backend:latest
        ports:
        - containerPort: 8081
