service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: jtq-frontend-service
  namespace: jtq
spec:
  type: NodePort
  selector:
    name: jtq-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: jtq-backend-service
  namespace: jtq
spec:
  type: NodePort
  selector:
    name: jtq-backend
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
